[gd_scene load_steps=4 format=3 uid="uid://c8bs7rfc3xqac"]

[ext_resource type="Script" path="res://enemies/summoner/summoner.gd" id="1_pcc57"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jjito"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h1ifw"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_pcc57")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_jjito")
skeleton = NodePath("")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_h1ifw")

[node name="AttackTimer" type="Timer" parent="."]

[node name="summon1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.16625)

[node name="summon2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.2506)

[node name="summon3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.22968, 0, -0.00740337)

[node name="summon4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.258, 0, -0.00740337)
